--- a/index.html
+++ b/index.html
@@ -12,5 +12,248 @@
 </head>
 <body>
 
+    <header class="header contenedor"> <!-- NAVEGACION -->
+        <div class="header__grid">
+            <a href="index.html" class="header__logo">
+                <img src="build/img/logo.svg" alt="logo escuela cocina">
+            </a>
+
+
+            <nav class="navegacion">
+                <a href="#" class="navegacion__link">Nosotros</a>
+                <a href="#" class="navegacion__link">Clases</a>
+                <a href="#" class="navegacion__link">Galeria</a>
+                <a href="#" class="navegacion__link">Contacto</a>
+            </nav>
+        </div>
+    </header><!-- NAVEGACION -->
+
+
+     <!-- BLOQUES -->
+    <section class="bloques">
+        <div class="bloques__grid">
+            <div class="bloque">
+                <div class="bloque__contenido">
+                    <h2 class="bloque__heading">20 Años de experiencia</h2>
+                    <p class="bloque__texto">Nos respaldan, siempre ofertando los mejores cursos para principiantes y expertos.</p>
+                </div>
+            </div> <!-- .bloque -->
+
+            <div class="bloque"></div><!-- .bloque -->
+
+            <div class="bloque">
+                <div class="bloque__contenido">
+                    <h2 class="bloque__heading">Sobre Nosotros</h2>
+                    <p class="bloque__texto">Un grupo de expertos, integrado por chef's de los mejores restaurantes de la ciudad.</p>
+                </div>
+            </div> <!-- .bloque -->
+
+            <div class="bloque"></div><!-- .bloque -->
+            
+        </div>
+    </section> <!-- .BLOQUES -->
+
+
+
+    <section class="nosotros contenedor">
+        <h2 class="nosotros__heading">
+            ¿Por qué estudiar con nosotros?
+        </h2>
+        <div class="nosotros__grid">
+
+            <div class="nosotros__bloque">
+                <img class="nosotros__imagen" src="build/img/icono_chef.png" alt="imagen icono">
+
+                <h3 class="nosotros__bloque-heading">
+                    Chef's Especialistas
+                </h3>
+                <p class="nosotros__bloque-">Los mejores chef's que han trabajado en los mejores restaurantes de Europa.</p>
+            </div> <!-- .nosotros bloque  -->
+            
+
+            <div class="nosotros__bloque">
+                <img class="nosotros__imagen" src="build/img/icono_vino.png" alt="imagen icono">
+
+                <h3 class="nosotros__bloque-heading">
+                    Incluye todo sobre Bebidas
+                </h3>
+                <p class="nosotros__bloque-">Además de la cocina, incluimos en el programa todo lo relacionado a bebida.</p>
+            </div> <!-- .bloque  -->
+
+
+            <div class="nosotros__bloque">
+                <img class="nosotros__imagen" src="build/img/icono_menu.png" alt="imagen icono">
+
+                <h3 class="nosotros__bloque-heading">
+                    Siempre Actualizado
+                </h3>
+                <p class="nosotros__bloque-">El programa se actualiza constantemente con nuevos platillos y técnicas.</p>
+            </div> <!-- .bloque  -->
+        </div>
+    </section>
+
+
+    <main class="clases">
+        <h2 class="clases__heading">Próximas Clases</h2>
+        <div class="clases__grid contenedor">
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase1.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Comida italiana para principiantes.</h3>
+
+                    <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase2.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Planeación de Menús para bodas.</h3>
+
+                    <p class="clase__descripcion">Añade la planeación de menús para bodas a tus habilidades.</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase3.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Preparación de pasteles.</h3>
+
+                    <p class="clase__descripcion">Aprende a preparar deliciosos postrs con este curso.</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase4.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Comida Mexicana</h3>
+
+                    <p class="clase__descripcion">Prepara la mejor comida mexicana con este curso.</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase5.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Comida de Marruecos.</h3>
+
+                    <p class="clase__descripcion">Aprende deliciosas recetas de la comida marroquí.</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+
+
+
+            <div class="clase">
+                <img class="clase__imagen" src="build/img/clase6.jpg" alt="imagen clase">
+
+                <div class="clase__meta">
+                    <p class="clase__fecha">
+                        20 / Mayo / 2022 18:00 Hrs
+                    </p>
+                    <p class="clase__precio">$300</p>
+                </div>
+
+                <div class="clase__contenido">
+                    <h3 class="clase__nombre">Prepara 10 tipos de ensaladas.</h3>
+
+                    <p class="clase__descripcion">Aprenderás hasta 10 tipos de ensaladas.</p>
+
+                    <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium necessitatibus fuga deleniti dolor ducimus, commodi provident non. Consequatur aliquid eveniet ipsa fugiat, consectetur neque excepturi quisquam, eos deleniti ipsam architecto.</p>
+
+                    <a href="#" class="clase__enlace">Más información</a>
+                </div>
+            </div><!-- .clase -->
+        </div>
+    </main>
+
+    <section class="escuela">
+        <h2 class="escuela__heading">¿Quieres ser Chef?</h2>
+        <p class="escuela__texto">Estudia la licenciatura para convertirte en Chef con nosotros.</p>
+        <a href="#" class="escuela__enlace">Más información</a>
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <nav class="navegacion">
+                <a href="#" class="navegacion__link">Nosotros</a>
+                <a href="#" class="navegacion__link">Clases</a>
+                <a href="#" class="navegacion__link">Galeria</a>
+                <a href="#" class="navegacion__link">Contacto</a>
+            </nav>
+
+            <p class="footer__copyright">Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
